--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>ICELatro</title>
+        <link rel="stylesheet" href="./src/styles/body.css" />
     </head>
     <body>
-        <div id="app"></div>
+        <div id="board">
+            <div class="sidebar">
+                <div class="item">Goal</div>
+                <div class="item">Score</div>
+                <div class="item">Discard</div>
+                <div class="item">Play turn</div>
+            </div>
+            <div class="main">
+                <div id="boardgame"></div>
+                <div id="buttons"></div>
+            </div>
+        </div>
         <script type="module" src="/src/main.ts"></script>
     </body>
 </html>
