--- a/index.html
+++ b/index.html
@@ -5,15 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>ICELatro</title>
         <link rel="stylesheet" href="./src/styles/body.css" />
+        <script type="module" src="./src/app/score.ts"></script>
     </head>
     <body>
         <div id="board">
-            <div class="sidebar">
-                <div class="item">Goal</div>
-                <div class="item">Score</div>
-                <div class="item">Discard</div>
-                <div class="item">Play turn</div>
-            </div>
+            <div id="sidebar"></div>
             <div class="main">
                 <div id="boardgame"></div>
                 <div id="buttons"></div>
